// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobListTable> renders correctly when there are jobs 1`] = `
<Table
  dataTest="dhis2-uicore-table"
>
  <TableHead
    dataTest="dhis2-uicore-tablehead"
  >
    <TableRowHead
      dataTest="dhis2-uicore-tablerowhead"
    >
      <TableCellHead
        dataTest="dhis2-uicore-tablecellhead"
      >
        Job name
      </TableCellHead>
      <TableCellHead
        dataTest="dhis2-uicore-tablecellhead"
      >
        Type
      </TableCellHead>
      <TableCellHead
        dataTest="dhis2-uicore-tablecellhead"
      >
        Schedule
      </TableCellHead>
      <TableCellHead
        dataTest="dhis2-uicore-tablecellhead"
      >
        Next run
      </TableCellHead>
      <TableCellHead
        dataTest="dhis2-uicore-tablecellhead"
      >
        Status
      </TableCellHead>
      <TableCellHead
        dataTest="dhis2-uicore-tablecellhead"
      >
        On/off
      </TableCellHead>
      <TableCellHead
        dataTest="dhis2-uicore-tablecellhead"
      />
    </TableRowHead>
  </TableHead>
  <TableBody
    dataTest="dhis2-uicore-tablebody"
  >
    <JobListTableItem
      job={
        Object {
          "cronExpression": "0 0 * ? * *",
          "displayName": "Name",
          "enabled": true,
          "id": "1",
          "jobStatus": "ENABLED",
          "jobType": "Type",
          "nextExecutionTime": "2100-10-10T14:48:00",
          "schedulingType": "CRON",
        }
      }
      key="1"
    />
    <JobListTableItem
      job={
        Object {
          "delay": 6000,
          "displayName": "Name",
          "enabled": true,
          "id": "2",
          "jobStatus": "ENABLED",
          "jobType": "Type",
          "nextExecutionTime": "",
          "schedulingType": "FIXED_DELAY",
        }
      }
      key="2"
    />
  </TableBody>
</Table>
`;

exports[`<JobListTable> renders correctly when there are no jobs 1`] = `
<Table
  dataTest="dhis2-uicore-table"
>
  <TableHead
    dataTest="dhis2-uicore-tablehead"
  >
    <TableRowHead
      dataTest="dhis2-uicore-tablerowhead"
    >
      <TableCellHead
        dataTest="dhis2-uicore-tablecellhead"
      >
        Job name
      </TableCellHead>
      <TableCellHead
        dataTest="dhis2-uicore-tablecellhead"
      >
        Type
      </TableCellHead>
      <TableCellHead
        dataTest="dhis2-uicore-tablecellhead"
      >
        Schedule
      </TableCellHead>
      <TableCellHead
        dataTest="dhis2-uicore-tablecellhead"
      >
        Next run
      </TableCellHead>
      <TableCellHead
        dataTest="dhis2-uicore-tablecellhead"
      >
        Status
      </TableCellHead>
      <TableCellHead
        dataTest="dhis2-uicore-tablecellhead"
      >
        On/off
      </TableCellHead>
      <TableCellHead
        dataTest="dhis2-uicore-tablecellhead"
      />
    </TableRowHead>
  </TableHead>
  <TableBody
    dataTest="dhis2-uicore-tablebody"
  >
    <TableRow
      dataTest="dhis2-uicore-tablerow"
    >
      <TableCell
        dataTest="dhis2-uicore-tablecell"
      >
        No jobs to display
      </TableCell>
    </TableRow>
  </TableBody>
</Table>
`;
